# outmatch

./: README.md  pyproject.toml
.github/workflows/: publish.yml
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: outmatch.tmLanguage.json
outmatch/: cli.py  parser.py  runner.py
tests/: main.om
tests/scenarios/: should_fail.om  should_pass.om
